# proto

./: .gitignore  Dockerfile.dev  MANIFEST.in  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: buf-ci.yaml  code-gen.yaml
dev/: buf  gen
proto/eventstore/v1/: main.proto
proto/qpoint/type/v1/: artifact.proto  connection.proto  database_request.proto  grpc_request.proto  issue.proto  pii.proto  redis_request.proto  request.proto  system.proto  tag.proto
proto/qscan/v1/: main.proto
